# spfluo-app

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGES.txt  MANIFEST.in  Makefile  README.md  TODO-planning.md  TODO.md  constraints.txt  experiments.ipynb  github-token.txt  hatch.toml  hatch_build.py  launch_napari.py  pyproject.toml  requirements-cp311-aarch64-apple-darwin.txt  requirements-cp311-x86_64-apple-darwin.txt  requirements-cp311-x86_64-pc-windows-msvc.txt  requirements-cp311-x86_64-unknown-linux-gnu.txt  requirements-cpu.txt  requirements-gpu.txt  requirements.in  requirements.txt  ruff.toml  setup.cfg  setup.py  spfluo-app.pyw  tox.ini  update.sh  utils_3d.py  utils_loading.py  utils_memory.py  uv.toml
.github/workflows/: ci-cd.yaml  devpi.yaml  docs.yaml  publish.yaml  requirements.yaml
app/: requirements-gpu-windows.txt  requirements-gpu.txt
code/ab-initio-reconstruction/: params.py
code/ab_initio_reconstruction/: __init__.py  api.py
code/alignement/: __init__.py  get_poses.py
code/reconstruction-ab-initio/: README.md
code/segmentation/: losses.py
code/tests/: utils_3d_test.py
code/utils/: __init__.py  fluo.py  utils_3d.py  utils_fluo.py  utils_loading.py  utils_memory.py
conda/: build-upload-packages.sh
conda/cucim/: meta.yaml
conda/outdated/: meta.yaml
conda/scipion-app/: meta.yaml
conda/scipion-fluo/: meta.yaml
conda/scipion-fluo-singleparticle/: meta.yaml
conda/scipion-pyworkflow/: meta.yaml
conda/spfluo/: meta.yaml  run_test.py
conda/spfluo-app/: construct.yaml  meta.yaml
conda/tkcolorpicker/: meta.yaml
docs/source/: conf.py
examples/: Stack009_c1.tif  ab_initio.py  picking.py  psf.tif
importance_sampling/common_image_processing_methods/: registration.py  rotation_translation.py  utils_3d.py
pyapp/: build.sh
pyworkflow/: config.py  constants.py  plugin.py
pyworkflow/project/: project.py
pyworkflow/protocol/: protocol.py
pyworkflow/utils/: log.py
scipion/: __init__.py  __main__.py  utils.py
scipion/install/: funcs.py  update_manager.py
scripts/: make_release.sh
segmentation/: create_centriole.py  data.py  train.py  unet_3d.py
singleparticle/: __init__.py  constants.py  convert.py  protocols.conf
singleparticle/protocols/: __init__.py  protocol_ab_initio.py  protocol_align_axis.py  protocol_deconv.py  protocol_extract_particles.py  protocol_picking.py  protocol_picking_predict.py  protocol_picking_train.py  protocol_reconstruction.py  protocol_refinement.py  protocol_select_subset.py  protocol_separate.py  protocol_utils.py
singleparticle/tests/: __init__.py  test_protocol_base.py  (+1 more)
spfluo/: __init__.py  conftest.py  constants.py  convert.py  multiple_viewer_widget.py  objects.py  protocols.conf
spfluo-app/: __main__.py  spfluo-app.pyw
spfluo/alignement/: main.py  (+2 more)
tests/: utils_3d_test.py  utils_memory_test.py
(+251 files in other folders)
