[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "scipion-fluo-singleparticle"
description = "Scipion plugin for single particle reconstruction."
readme = "README.rst"
authors = [{name = "Jean Plumail", email = "jplumail@unistra.fr"}]
keywords = ["scipion", "fluorescence", "imageprocessing", "scipion-3.0"]
dynamic = ["version"]
dependencies = [
    "scipion-pyworkflow @ git+ssh://git@github.com/jplumail/scipion-pyworkflow@windows ; platform_system == 'Windows'",
    "scipion-pyworkflow>=3.3 ; platform_system == 'Linux'",
    "scipion-fluo @ git+ssh://git@github.com/jplumail/scipion-fluo",
    "numpy",
    "scipy",
    "spfluo[manual-picking,ab-initio-reconstruction,visualisation,picking] @ git+ssh://git@github.com/jplumail/spfluo",
    "flask",
    "waitress",
    "napari-spfluo @ git+ssh://git@github.com/jplumail/napari-spfluo"
]

[project.urls]
Repository = "https://github.com/jplumail/scipion-fluo-singleparticle"

[project.entry-points."pyworkflow.plugin"]
singleparticle = "singleparticle"
