[build-system]
requires = ["hatchling>=1.16", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "spfluo-app"
authors = [
  { name="Jean Plumail", email="jplumail@unistra.fr" },
]
dependencies = [
  "scipion-fluo-singleparticle",
  "scipion-app",
  "napari[pyqt5]",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/jplumail/spfluo-app.git"

[project.gui-scripts]
spfluo-app = "spfluo_app:main"

[project.optional-dependencies]
gpu = ["spfluo[gpu]"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/spfluo_app"]

[tool.uv.pip]
index-url = "https://pypi.spfluo.ovh/jean/dev/+simple"

[tool.uv.sources]
scipion-fluo-singleparticle = { workspace = true }
scipion-app = { workspace = true }
spfluo = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]